Text change on 'Browse as Guest' button

BUG=715637

Review-Url: https://codereview.chromium.org/2864793002
Cr-Commit-Position: refs/heads/master@{#470871}

Former-commit-id: a5c71ee3a3a1a08041849f51f7e457e9673014f1